# Runpod-Idle-Pod-Monitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml.template  create_demo_gif_v2.py  docker-compose.yml  examplebuildcommand.md  generate_test_data.py  pyproject.toml  run.py  self_monitor_portable.sh  server.py  start.sh
runpod_monitor/: __init__.py  auto_stop_tracker.py  data_tracker.py  hooks.py  main.py  metric_writer.py  metrics_timeline_builder.py  pod.py  pod_cost_cache.py  pod_metrics_manager.py  runpod_query.graphql  unified_billing_monitor.py  web_server.py
runpod_monitor/web_server/: __init__.py  config_management.py  helpers.py  main.py  metrics.py  monitoring.py  pod_management.py  reports.py
self-contained/: README.md  TMUX_HELP.md  quick_install.sh  self_monitor_portable.sh
templates/: base.html  config.html  current_settings.html  dashboard.html  metrics.html  pods_table.html  reports.html
